--- a/.imgbotconfig
+++ b/.imgbotconfig
@@ -1,8 +1,8 @@
 {
-    "schedule": "daily", // daily|weekly|monthly
-    "aggressiveCompression": "true", // true|false
-    "compressWiki": "true", // true|false
-    "minKBReduced": null, // delay new prs until size reduction meets this threshold (default to 10)
+    "schedule": "daily",
+    "aggressiveCompression": "true",
+    "compressWiki": "true",
+    "minKBReduced": null,
     "prTitle" : "Compression image",        
     "prBody" : " Text before optimization ratio {optimization_ratio} Text after optimization ratio 
                  Text before optimization details {optimization_details} Text after optimization details",
